package Fourmis;

public class Reine extends Fourmis{

    @Override
    public void move() {
    }
}
